--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:image" itemprop="image" content="mages/dp.jpg">
     <meta property="og:type" content="website" />
 
-    <link itemprop="thumbnailUrl" src="images/logoo.jpg">
+    <link itemprop="thumbnailUrl" src="images/logo.png">
     <!-- No need to change anything here -->
     <meta property="og:type" content="website" />
     <meta property="og:image:type" content="image/jpeg">
@@ -29,15 +29,15 @@
 
 <body onload="startFunction()">
 
-    <link itemprop="thumbnailUrl" src="images/logoo.jpg">
+    <link itemprop="thumbnailUrl" src="images/logo.png">
     <span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject">
-        <link itemprop="url" src="images/logoo.jpg">
+        <link itemprop="url" src="images/logo.png">
     </span>
 
     <nav>
 
         <div class="navbar">
-            <img class="dpimg" onclick="openFullScreenDP()" src="images/logoo.jpg" alt="">
+            <img class="dpimg" onclick="openFullScreenDP()" src="images/logo.png" alt="">
             <div class="personalInfo">
                 <label id="name">WELCOME TO LALEAR</label>
                 <label id="lastseen"></label>
@@ -51,7 +51,7 @@
 
         <div class="fullScreenDP" id="fullScreenDP">
             <div class="insideDP">
-                <img class="dp" src="images/logoo.jpg" alt="">
+                <img class="dp" src="images/logo.png" alt="">
                 <svg class="closeBTN" onclick="closeFullDP()" xmlns="http://www.w3.org/2000/svg" width="64px"
                     viewBox="0 0 512 512" height="64px">
                     <path class="btnColor" fill="#E04F5F"
